--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 PORT = 
-SMTP_PORT = 2525
-SMTP_HOST = "smtp.mailtrap.io"
-SMTP_USER = "344be0c418a8a9"
-SMTP_PASSWORD = "c8663c481dbaa5"
+SMTP_PORT = 
+SMTP_HOST = 
+SMTP_USER = 
+SMTP_PASSWORD = 
 
-YOUR_EMAIL =mjekottdev@gmail.com
+YOUR_EMAIL = 
